fix: bugs from leone photo and routes, implemented tags

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="theme-color" content="#0000" />
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Liturgia Petrus</title>
+
+  <title>Sacrosanctum</title>
+  <meta name="description"
+    content="Um espaço dedicado ao sagrado, ao conhecimento e à contemplação espiritual. Descubra o Sacrosanctum." />
+
+  <meta property="og:title" content="Sacrosanctum — Um espaço sagrado para sua jornada interior" />
+  <meta property="og:description"
+    content="Explore conteúdos espirituais, reflexões e práticas em um ambiente sereno e inspirador." />
+  <meta property="og:image" content="https://sacrosanctum.vercel.app/cover-sacrosanctum.webp" />
+  <meta property="og:url" content="https://sacrosanctum.vercel.app" />
+  <meta property="og:type" content="website" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Sacrosanctum — Um espaço sagrado para sua jornada interior" />
+  <meta name="twitter:description"
+    content="Explore conteúdos espirituais, reflexões e práticas em um ambiente sereno e inspirador." />
+  <meta name="twitter:image" content="https://sacrosanctum.vercel.app/cover-sacrosanctum.webp" />
 </head>
 
 <body>
